--- a/main/resource/nav.css
+++ b/main/resource/nav.css
@@ -1,17 +1,7 @@
-.nav{
-    width: 18%;
-    height: 100%;
-    float: left;
-    overflow-y: scroll;
-}
-
-.nav::-webkit-scrollbar { 
-    display: none; 
-}
-
 .nav-list{
     overflow: hidden;
 }
+
 .nav-list h2{
     position: relative;
     padding: 20px;
@@ -51,7 +41,23 @@ a{
     background-color:rgb(128, 128, 128);
 }
 
-@media screen and (max-width: 600px){
+@media screen and (min-width: 1000px){
+
+    .nav{
+        width: 18%;
+        height: 92%;
+        float: left;
+        overflow-y: scroll;
+    }
+    
+    .nav::-webkit-scrollbar { 
+    display: none; 
+    }
+
+}
+
+
+@media screen and (max-width: 1000px){
     .subjects{
         margin-left: 0;
         margin-top: 5px;
@@ -61,7 +67,5 @@ a{
 
     .nav{
         width: 100%;
-        height: 100%;
-        float: left;
     }
 }
