--- a/main/resource/index.css
+++ b/main/resource/index.css
@@ -13,30 +13,28 @@ body::-webkit-scrollbar {
 
 .head{
     width: 100%;
-    height: 7%;
+    height: 8%;
     background-color: rgb(243,242,238);
 }
 
 .title{
     height: 100%;
+    padding-top: 4%;
 }
 
 .title h1{
-    width: 200px;
-    height: 100%;
+    width: 180px;
     font-size: 20px;
     text-align: center;
-    line-height: 60px;
     margin-right: 10px;
 } 
 
 .return a{
     width: 50px;
-    height: 100%;
     font-size: 20px;
+    padding-top: 4%;
     text-align: center;
-    line-height: 60px;
-    margin-right: 50px;
+    margin-right: 80px;
     color: rgb(97, 94, 94);
     float: right;
 }
