--- a/main/resource/nav.css
+++ b/main/resource/nav.css
@@ -9,8 +9,8 @@
     font-size: 15px;
     background-color:rgb(180, 180, 180);
     margin-top: 0px;
-    border-top-style: solid;
-    border-top-color: rgb(212, 212, 212);
+    border-bottom-style: solid;
+    border-bottom-color: rgb(212, 212, 212);
     color: white;
 }
 .nav-list i{
@@ -45,7 +45,7 @@ a{
 
     .nav{
         width: 18%;
-        height: 90%;
+        height: 92%;
         float: left;
         overflow-y: scroll;
     }
@@ -66,6 +66,7 @@ a{
     }
 
     .nav{
+        margin-top: 5px;
         width: 100%;
     }
 }
