--- a/main/resource/nav.css
+++ b/main/resource/nav.css
@@ -33,12 +33,13 @@ a{
     background-color:rgb(207, 207, 207);
     border-bottom: 2px solid white;
     text-align: center;
-    font-size: 12px;
-    color: white;
+    font-size: 13px;
+    color: black;
 }
 
 .hide h5:hover{
     background-color:rgb(128, 128, 128);
+    color: white;
 }
 
 @media screen and (min-width: 1000px){
